fix alignments

--- a/assets/css/initial-setup/main.styl
+++ b/assets/css/initial-setup/main.styl
@@ -688,7 +688,7 @@ p.a0-message {
   }
   
   .nav-tabs {
-    margin: 30px -15px; 
+    margin: 30px 0; 
     
     a {
       color:#5b666f;
